--- a/public/partials/technology-form.html
+++ b/public/partials/technology-form.html
@@ -1,4 +1,4 @@
-<div ng-controller="TechnologyFormController as controller" class="container-fluid">
+<div ng-controller="TechnologyFormController as controller" class="container-fluid" style="width: 90%">
     <!-- Estado de tecnología -->
     <div class="row" style="margin-top: 15px">
         <div class="col-md-10"><h2>{{controller.answers['basic'][0].name}}</h2></div>
