Little styles added to attachments zone

--- a/public/partials/technology-form.html
+++ b/public/partials/technology-form.html
@@ -303,6 +303,9 @@
             <h3>Documentos adjuntos: </h3>
             <md-content class="layout-padding _md">
                 <h5>Documentos agregados previamente: </h5>
+                <div ng-if="controller.answers.documents.length == 0 || !controller.answers.documents">
+                    Esta tecnología no tiene documentos adjuntos
+                </div>
                 <div ng-repeat="document in controller.answers.documents">
                     <a href="{{document.url}}">{{document.name}}</a>
                 </div>
