Double home controller load fixed

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -58,7 +58,7 @@
     </div> -->
 
     <!-- Animation & Effects Scripts -->
-    <script src="js/lib/script.min.js"></script>
+    <!-- <script src="js/lib/script.min.js"></script>
     <button class="btn btn-primary" type="button" data-bs-hover-animate="bounce" id="goTopBtn"><i class="material-icons">keyboard_arrow_up</i></button>
     <section id="mainSec" class="section">
         <div class="container d-flex flex-column justify-content-center align-items-center align-content-center" style="height:100%;max-height:100%;">
@@ -172,5 +172,5 @@
         <div id="copyright">
             <p class="text-center" style="padding:0;margin:0;">Copyright 2015&nbsp;<a href="http://www.univalle.edu.co/">Universidad del Valle</a>&nbsp;-&nbsp;<a href="http://www.univalle.edu.co/index.php/la-universidad/horarios-de-atencion">Horarios de atención</a>&nbsp;/ Última Actualización: 15-05-2018<br></p>
         </div>
-    </section>
+    </section> -->
 </div>
