--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,4 +1,33 @@
 <div id="homeDiv" ng-controller="HomeController as controller">
+
+    <!-- Patents and technologies new table -->
+    <!-- <div style="width:80%; margin-left: 10%; margin-top: 2%">
+        <md-toolbar class="md-table-toolbar md-default">
+          <div class="md-toolbar-tools">
+            <span>Tecnologías y patentes</span>
+          </div>
+        </md-toolbar>
+        <md-table-container>
+          <table md-table md-row-select ng-model="selected">
+            <thead md-head md-order="query.order" md-on-reorder="getDesserts">
+              <tr md-row>
+                <th md-column md-order-by="nameToLower" style="width:30%"><span>Título</span></th>
+                <th md-column style="width:50%"><span>Descripción</span></th>
+                <th md-column style="width:20%">Tipo</th>
+              </tr>
+            </thead>
+            <tbody md-body>
+              <tr md-row md-select="dessert" md-select-id="name" md-auto-select ng-repeat="dessert in controller.desserts">
+                <td md-cell>{{dessert.name}}</td>
+                <td md-cell>{{dessert.calories.value}}</td>
+                <td md-cell>{{dessert.fat.value | number: 1}}</td>
+              </tr>
+            </tbody>
+          </table>
+        </md-table-container>
+        <md-table-pagination md-limit="query.limit" md-limit-options="[5, 10, 15]" md-page="query.page" md-total="{{desserts.count}}" md-on-paginate="getDesserts" md-page-select></md-table-pagination>
+    </div> -->
+
     <!-- Mapa de nodos -->
     <!-- <div>
         <ul class="nav nav-tabs">
@@ -58,7 +87,7 @@
     </div> -->
 
     <!-- Animation & Effects Scripts -->
-    <!-- <script src="js/lib/script.min.js"></script>
+    <script src="js/lib/script.min.js"></script>
     <button class="btn btn-primary" type="button" data-bs-hover-animate="bounce" id="goTopBtn"><i class="material-icons">keyboard_arrow_up</i></button>
     <section id="mainSec" class="section">
         <div class="container d-flex flex-column justify-content-center align-items-center align-content-center" style="height:100%;max-height:100%;">
@@ -172,5 +201,5 @@
         <div id="copyright">
             <p class="text-center" style="padding:0;margin:0;">Copyright 2015&nbsp;<a href="http://www.univalle.edu.co/">Universidad del Valle</a>&nbsp;-&nbsp;<a href="http://www.univalle.edu.co/index.php/la-universidad/horarios-de-atencion">Horarios de atención</a>&nbsp;/ Última Actualización: 15-05-2018<br></p>
         </div>
-    </section> -->
+    </section>
 </div>
