--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -137,7 +137,9 @@
                                                 <span ng-show="{{technology['granted-date'] == undefined}}" class="badge" style="background-color: #D51B23;">Tecnología</span>
                                             </div>
                                         </td>
-                                        <td></td>
+                                        <td style="text-align: center">
+                                            <img src="img/view.png" style="width:18%; cursor: pointer" ng-click="controller.showDetails()"/>
+                                        </td>
                                     </tr>
                                 </tbody>
                         </table>
