--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -129,7 +129,7 @@
                                     <tr ng-repeat="technology in controller.technologiesArray" style="color: rgb(105, 105, 107); font-size: 14px">
                                         <td>{{ technology.createdAt }}</td>
                                         <td>{{ technology.name }}</td>
-                                        <td>{{ technology.description | limitTo:100 }}</td>
+                                        <td>{{ (technology.details.answers.basic[0].description | limitTo:100) || 'Sin descripción' }}</td>
                                         <td>{{ technology['principal-researcher-email'] }}</td>
                                         <td>
                                             <div style="vertical-align: top; text-align: center;">
@@ -138,7 +138,7 @@
                                             </div>
                                         </td>
                                         <td style="text-align: center">
-                                            <img src="img/view.png" style="width:20%; cursor: pointer" ng-click="controller.showDetails()"/>
+                                            <img src="img/view.png" style="width:25%; cursor: pointer" ng-click="controller.showDetails($index)"/>
                                         </td>
                                     </tr>
                                 </tbody>
