Minnor style changes added to technologies table in home page

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -127,10 +127,10 @@
                                 </thead>
                                 <tbody>
                                     <tr ng-repeat="technology in controller.technologiesArray" style="color: rgb(105, 105, 107); font-size: 14px">
-                                        <td>{{ technology.createdAt }}</td>
-                                        <td>{{ technology.name }}</td>
-                                        <td>{{ (technology.details.answers.basic[0].description | limitTo:100) || 'Sin descripción' }}</td>
-                                        <td>{{ technology['principal-researcher-email'] }}</td>
+                                        <td>{{ technology.technologyId }}</td>
+                                        <td style="width: 25%">{{ technology.name }}</td>
+                                        <td style="width: 25%">{{ (technology.details.answers.basic[0].description | limitTo:100) || 'Sin descripción' }}</td>
+                                        <td style="width: 22%">{{ technology['principal-researcher-email'] }}</td>
                                         <td>
                                             <div style="vertical-align: top; text-align: center;">
                                                 <span ng-show="{{technology['granted-date'] != undefined}}" class="badge" style="background-color: #D51B23;">Patente</span>
