--- a/public/partials/technology-form.html
+++ b/public/partials/technology-form.html
@@ -119,7 +119,8 @@
                                             <div class="alert alert-info" role="alert" ng-if="question.relatedText">{{question.relatedText}}</div>
                                             <md-input-container class="md-block">
                                                 <md-checkbox ng-model="answer[question.name]"
-                                                        ng-readonly="controller.formatObjects[controller.currentNavItem].readonly"ng-required="question.required" 
+                                                        ng-readonly="controller.formatObjects[controller.currentNavItem].readonly" 
+                                                        ng-required="question.required" 
                                                         type="checkbox" name="{{question.name + $index}}">
                                                     <div ng-if="question.relatedText"> Acepto {{question.tag | lowercase}} </div> 
                                                     <div ng-if="!question.relatedText"> {{question.tag}} </div> 
@@ -298,25 +299,55 @@
                 <div ng-if="controller.answers.documents.length == 0 || !controller.answers.documents" style="color: #75797d;">
                     Esta tecnología no tiene documentos adjuntos
                 </div>
-                <div ng-repeat="document in controller.answers.documents">
-                    <a href="{{document.url}}">{{document.name}}</a>
+                <div ng-if="controller.answers.documents.length && controller.answers.documents.length > 0" style="width: 90%; margin-left: 5%; box-shadow: 1px 1px 8px #cbc7c7; border-radius: 5px">
+                    <table datatable="ng" class="row-border hover">
+                        <thead>
+                            <tr>
+                                <th style="text-align: center; color: #75797d; font-size: 14px">Nombre de documento</th>
+                                <th style="text-align: center; color: #75797d; font-size: 14px">Tipo</th>
+                                <th style="text-align: center; color: #75797d; font-size: 14px">Extensión</th>
+                                <th style="text-align: center; color: #75797d; font-size: 14px">Acción</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="document in controller.answers.documents" style="color: rgb(105, 105, 107); font-size: 14px; text-align: center">
+                                <td>{{document.name}}</td>
+                                <td ng-if="!document.fileCategory">Sin tipo</td>
+                                <td ng-if="document.fileCategory == 'other'">Otro</td>
+                                <td ng-if="document.fileCategory == 'brochure'">Brochure</td>
+                                <td ng-if="document.fileCategory == 'article'">Artículo</td>
+                                <td ng-if="!document.fileType">Sin extensión</td>
+                                <td ng-if="document.fileType">{{document.fileType}}</td>
+                                <td>
+                                    <a href="{{document.url}}" target="_blank" style="text-decoration: none">
+                                        <img src="img/download.png" style="width: 28px; height: 28px; cursor: pointer"/>
+                                    </a>
+                                    <img ng-if="controller.technologyStatus == 'En diligencia'" src="img/trash.png" style="width: 28px; height: 28px; cursor: pointer"/>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <!-- <a href="{{document.url}}">{{document.name}}</a> -->
                 </div>
             </md-content>
-            <form ng-submit="controller.uploadFile()" style="margin-top: 10px">
+            <form ng-submit="(attachments.$valid) && controller.uploadFile()" name="attachments" style="margin-top: 10px">
                 <md-content class="layout-padding _md formgroup">
                     <h5>Adjuntar nuevo documento: </h5>
                     <div style="color: #75797d;">Adjunte aquí todos los documentos que considere necesarios para registrar su tecnología.</div>
                     <div class="row" style="width: 100%">
                         <md-input-container class="md-block col-md-6" flex-gt-sm style="margin-left: 13px">
                             <label>Tipo de documento</label>
-                            <md-select  ng-model="controller.fileCategory">
+                            <md-select  ng-model="controller.fileCategory" ng-required="true" name="type">
                                 <md-option value="article">Artículo</md-option>
                                 <md-option value="brochure">Brochure</md-option>
                                 <md-option value="other">Otro</md-option>
 
                             </md-select>
+                            <div ng-messages="attachments.type.$error">
+                                <div ng-message="required">Se requiere de este campo para continuar.</div>
+                            </div>
                         </md-input-container>
-                        <input type="file" name="file" class="inputimg col-md-6" id="document" required style="margin-top: 18px">
+                        <input type="file" name="file" class="inputimg col-md-6" id="document" ng-required="true" style="margin-top: 18px">
                     </div>
                     <md-button type="submit" class="md-raised md-primary float-right formButton" style="margin: 0; padding: 0px; padding-left: 5px; padding-right: 5px;">Adjuntar documento</md-button>
                     <!-- <br /> -->
