Attachments form now works properly. Notifications added.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -296,3 +296,8 @@ button.md-accent {
 md-backdrop{
     position: fixed;
 }
+
+.ng-untouched ~ .md-input-messages-animation {
+    height: 0 !important;
+    opacity: 0 !important;
+}
