Email notifications improved

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -297,7 +297,7 @@ md-backdrop{
     position: fixed;
 }
 
-.ng-untouched ~ .md-input-messages-animation {
+/*.ng-untouched ~ .md-input-messages-animation {
     height: 0 !important;
     opacity: 0 !important;
-}
+}*/
