Attachment section moddified to show only while not in Información básica tab

--- a/public/partials/technology-form.html
+++ b/public/partials/technology-form.html
@@ -291,7 +291,7 @@
     </div>
     <br/>
     <!-- Archivos adjuntos -->
-    <div class="message" style="margin-top: -15px; margin-bottom: 50px">
+    <div class="message" style="margin-top: -15px; margin-bottom: 50px" ng-show="(controller.currentNavItem != 'Información Basica')">
         <div>
             <h3>Documentos adjuntos: </h3>
             <md-content class="layout-padding _md formgroup">
