Now it is possible and necessary to add comments when coordinator return the technology to the researcher

--- a/public/partials/technology-details.html
+++ b/public/partials/technology-details.html
@@ -1,5 +1,4 @@
-
-<md-dialog aria-label="Technology Details">
+<md-dialog aria-label="Technology Details" style="min-width: 50%">
   <form ng-cloak>
     <md-toolbar style="color:#75797d">
       <div class="md-toolbar-tools">
