Email message added when the technology is retruned to the researcher

--- a/public/partials/technology-details.html
+++ b/public/partials/technology-details.html
@@ -21,7 +21,7 @@
           {{selectedTechnology.details.answers.basic[0].description || 'Sin descripción' }}
         </p> 
         <span class="badge" style="background-color: #D51B23; font-size: 15px">Tipo de invención</span>
-        <p style="margin-left: 1%; margin-top:8px; color: #75797d">
+        <p style="margin-left: 1%; margin-top:8px; color: #75797d; text-transform: capitalize;">
           {{selectedTechnology['technology-type']}}
         </p>
         <span class="badge" style="background-color: #D51B23; font-size: 15px">Nombre de investigador principal</span>        
